--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Joke App</string>
     <string name="refresh">refresh</string>
+    <string name="generic_error_msg">Ocurrió un error</string>
 </resources>
